--- a/.github/workflows/content-gh-pages.yml
+++ b/.github/workflows/content-gh-pages.yml
@@ -20,7 +20,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Prepare deploy directory
-        run: mkdir deploy-root && mv . deploy-root/
+        run: |
+          mkdir deploy-root
+          shopt -s extglob
+          mv -- !(deploy-root) deploy-root/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
