fix: 不要なオプションを削除してデプロイコマンドを簡素化

--- a/.github/workflows/content-gh-pages.yml
+++ b/.github/workflows/content-gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           mkdir deploy-root
           shopt -s extglob
-          mv -- !(deploy-root) deploy-root/
+          mv !(deploy-root) deploy-root/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
