fix: デプロイ環境のURLを設定

--- a/.github/workflows/content-gh-pages.yml
+++ b/.github/workflows/content-gh-pages.yml
@@ -15,12 +15,13 @@ jobs:
   deploy:
     environment:
       name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Prepare deploy directory
-        run: |
+        run: |-
           mkdir deploy-root
           shopt -s extglob
           mv !(deploy-root) deploy-root/
